[package]
name = "async-std-test"
description = "Alternate implementation of the #[async_std::test] macro"
repository = "https://github.com/ammongit/async-std-test"
readme = "README.md"
license = "MIT"
keywords = ["async", "test", "async-std"]
categories = ["asynchronous"]
exclude = [".gitignore", ".github"]

version = "0.0.3"
authors = ["Ammon Smith <ammon.i.smith@gmail.com>"]
edition = "2021" # this is *not* the same as the current year

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"

[dev-dependencies]
async-std = "1"
